# saudade-blog-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: __init__.py  agent.py  memory.py  prompts.py
chains/: __init__.py
config/: settings.py
models/: llm.py
tools/: __init__.py  base.py
utils/: __init__.py  helpers.py  logging.py
